# unzrip

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: decomp.rs
memutils/: Cargo.toml
memutils/src/: lib.rs
src/: main.rs  util.rs
tests/: zip.rs  zip64.rs
zip-parser/: Cargo.toml
zip-parser/src/: lib.rs  util.rs
