[package]
name = "unzrip"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "zip-parser", "memutils" ]

[features]
default = [ "zstd-sys" ]
zstd-sys = [ "zstd" ]

[dependencies]
zip-parser = { path = "zip-parser" }

# tools
anyhow = "1"
argh = "0.1"
bstr = "1"
memutils = { path = "memutils" }
tinyvec = { version = "1", features = [ "std" ] }

# fast
rayon = "1"
memmap2 = "0.7"

# check
crc32fast = "1"

# compress
flate2 = "1"
zstd = { version = "0.12", features = [ "pkg-config" ], optional = true }

# encoding
encoding_rs = "0.8"
chardetng = "0.1"

# time
time = "0.3"
filetime = "0.2"

[dev-dependencies]
zip = { version = "0.6", default-features = false, features = [ "deflate" ] }
tempfile = "3"
assert_cmd = "2"
walkdir = "2"
criterion = "0.4"

[[bench]]
name = "decomp-with-volatile"
path = "benches/decomp.rs"
harness = false
